Remove InsertSourceFromCells